# langgraph-mvc

./: README.md  pyproject.toml
src/mvc/frontends/telegram/: bot.py  main.py
src/mvc/frontends/web/: app.py
